syntax = "proto2";

import "uuid.proto";

message MessageId {
    required Uuid value = 1;
}
